@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Tue, Apr 7, 2009
+---------------------------------------------------------------------
+- Added quick reschedule links to [Edit Task].
+- Finished with editing tasks.
+
 Mon, Apr 6, 2009
 ---------------------------------------------------------------------
 - Introduced called_from_(index|landing)_page? helpers.
